--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,1 +1,70 @@
-<p>signup works!</p>
+<div fxLayout="column"
+fxLayoutAlign="center center"
+fxLayoutGap="20px"><form
+#form="ngForm"
+(ngSubmit)="onsignup(form)"
+
+>
+<mat-form-field class="form" appearance="outline">
+  <input
+    type="text"
+    matInput
+    placeholder="Name"
+    name="name"
+    ngModel
+    required
+    #nameinput="ngModel"
+  />
+  <mat-error *ngIf="nameinput.hasError('required')"
+    >Field must not be empty</mat-error
+  >
+  <mat-error *ngIf="!nameinput.hasError('required')"
+    >Email is invalid</mat-error
+  >
+</mat-form-field>
+<mat-form-field class="form" appearance="outline">
+  <input
+    type="email"
+    matInput
+    placeholder="E-mail"
+    name="email"
+    ngModel
+    required
+    #emailinput="ngModel"
+  />
+  <mat-error *ngIf="emailinput.hasError('required')"
+    >Field must not be empty</mat-error
+  >
+  <mat-error *ngIf="!emailinput.hasError('required')"
+    >Email is invalid</mat-error
+  >
+</mat-form-field>
+<mat-form-field class="form" appearance="outline">
+  <input
+    type="text"
+    matInput
+    placeholder="Phone Number"
+    name="phno"
+    ngModel
+    required
+    #phnoinput="ngModel"
+  />
+  <mat-error *ngIf="phnoinput.hasError('required')"
+    >Field must not be empty</mat-error
+  >
+  <mat-error *ngIf="!phnoinput.hasError('required')"
+    >Email is invalid</mat-error
+  >
+</mat-form-field>
+<div>
+  <button
+    type="submit"
+    mat-raised-button
+    color="primary"
+    [disabled]="form.invalid"
+  >
+    Sign up
+  </button>
+</div>
+</form>
+</div>
