--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,70 +1,104 @@
-<div fxLayout="column"
-fxLayoutAlign="center center"
-fxLayoutGap="20px"><form
-#form="ngForm"
-(ngSubmit)="onsignup(form)"
+<div fxLayout>
+  <div>
+    <img src="assets\Images\Signup\signup.jpg" />
+  </div>
+  <div>
+    <section>
+      <mat-card class="form-card">
+        <form fxLayout="column" #form="ngForm" (ngSubmit)="onsignup(form)">
+          <mat-form-field appearance="fill">
+            <input
+              class="input"
+              type="email"
+              placeholder="     E-mail"
+              name="email"
+              ngModel
+              required
+              #emailinput="ngModel"
+            />
 
->
-<mat-form-field class="form" appearance="outline">
-  <input
-    type="text"
-    matInput
-    placeholder="Name"
-    name="name"
-    ngModel
-    required
-    #nameinput="ngModel"
-  />
-  <mat-error *ngIf="nameinput.hasError('required')"
-    >Field must not be empty</mat-error
-  >
-  <mat-error *ngIf="!nameinput.hasError('required')"
-    >Email is invalid</mat-error
-  >
-</mat-form-field>
-<mat-form-field class="form" appearance="outline">
-  <input
-    type="email"
-    matInput
-    placeholder="E-mail"
-    name="email"
-    ngModel
-    required
-    #emailinput="ngModel"
-  />
-  <mat-error *ngIf="emailinput.hasError('required')"
-    >Field must not be empty</mat-error
-  >
-  <mat-error *ngIf="!emailinput.hasError('required')"
-    >Email is invalid</mat-error
-  >
-</mat-form-field>
-<mat-form-field class="form" appearance="outline">
-  <input
-    type="text"
-    matInput
-    placeholder="Phone Number"
-    name="phno"
-    ngModel
-    required
-    #phnoinput="ngModel"
-  />
-  <mat-error *ngIf="phnoinput.hasError('required')"
-    >Field must not be empty</mat-error
-  >
-  <mat-error *ngIf="!phnoinput.hasError('required')"
-    >Email is invalid</mat-error
-  >
-</mat-form-field>
-<div>
-  <button
-    type="submit"
-    mat-raised-button
-    color="primary"
-    [disabled]="form.invalid"
-  >
-    Sign up
-  </button>
-</div>
-</form>
+            <mat-error *ngIf="emailinput.hasError('required')"
+              >Field must not be empty</mat-error
+            >
+            <mat-error *ngIf="!emailinput.hasError('required')"
+              >Email is invalid</mat-error
+            >
+          </mat-form-field>
+          <mat-form-field appearance="fill">
+            <input
+              class="input"
+              type="email"
+              placeholder="     E-mail"
+              name="email"
+              ngModel
+              required
+              #emailinput="ngModel"
+            />
+
+            <mat-error *ngIf="emailinput.hasError('required')"
+              >Field must not be empty</mat-error
+            >
+            <mat-error *ngIf="!emailinput.hasError('required')"
+              >Email is invalid</mat-error
+            >
+          </mat-form-field>
+          <mat-form-field appearance="fill">
+            <input
+              class="input"
+              type="text"
+              placeholder="     Phone Number"
+              name="phno"
+              ngModel
+              required
+              #phnoinput="ngModel"
+            />
+
+            <mat-error *ngIf="phnoinput.hasError('required')"
+              >Field must not be empty</mat-error
+            >
+            <mat-error *ngIf="!phnoinput.hasError('required')"
+              >Email is invalid</mat-error
+            >
+          </mat-form-field>
+          <button
+            class="btn"
+            type="submit"
+            mat-raised-button
+            color="primary"
+            [disabled]="form.invalid"
+          >
+            Sign up
+          </button>
+        </form>
+<section fxLayout="column" fxLayoutAlign="center center">
+      <section style="padding-top: 30px;padding-bottom: 20px;">
+        <p>-----------------------Or continue with-----------------------</p>
+      </section>
+      <section fxLayout fxLayoutGap="20px">
+        <mat-card class="icon-card">
+          <img
+            class="icon"
+            fxLayoutAlign="center"
+            src="assets\Images\Signup\google.png"
+          />
+        </mat-card>
+        <mat-card class="icon-card">
+          <img
+            class="icon"
+            fxLayoutAlign="center"
+            src="assets\Images\Signup\apple.png"
+          />
+        </mat-card>
+        <mat-card class="icon-card">
+          <img
+            class="icon"
+            fxLayoutAlign="center"
+            src="assets\Images\Signup\facebook.png"
+          />
+        </mat-card>
+      </section>
+</section>
+    </mat-card>
+    </section>
+  </div>
 </div>
