--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,98 @@
-<p>login works!</p>
+<div fxLayout fxLayoutAlign="center" fxLayoutGap="60px" class="signup">
+  <div fxLayout>
+    <div class="container">
+      <img class="image" src="assets\Images\Signup\signup.jpg" />
+      <section class="centered">
+        <p class="heading">Sign In to create<br />your free chatbot.</p>
+        <p class="font">
+          If you don't have an account <br />you can
+          <a class="a" href="/signup">Register here!</a>
+        </p>
+      </section>
+    </div>
+  </div>
+  <div style="padding-top: 60px;">
+    <section>
+      <section class="form-card">
+        <form fxLayout="column" #form="ngForm" (ngSubmit)="onsignup(form)">
+          <mat-form-field appearance="fill">
+            <input
+              class="input"
+              type="text"
+              placeholder="E-mail or Phone Number"
+              name="email"
+              ngModel
+              required
+              #emailinput="ngModel"
+            />
+
+            <mat-error *ngIf="emailinput.hasError('required')"
+              >Field must not be empty</mat-error
+            >
+            <mat-error *ngIf="!emailinput.hasError('required')"
+              >Email is invalid</mat-error
+            >
+          </mat-form-field>
+
+          <mat-form-field
+            appearance="outline"
+            hintLabel="should be atleast 6 character long"
+          >
+            <input
+              class="input"
+              type="password"
+              placeholder="Password"
+              name="password"
+              ngModel
+              required
+              minlength="6"
+              #password="ngModel"
+            /> </mat-form-field
+          ><br />
+          <section style="padding-inline-start: 245px;padding-bottom:20px;">
+            <a class="a" href="/recovery">Recovery Password</a>
+          </section>
+          <button
+            class="btn"
+            type="submit"
+            mat-raised-button
+            color="primary"
+            [disabled]="form.invalid"
+          >
+            <a class="a2" href="/login">Sign up</a>
+          </button>
+        </form>
+        <section fxLayout="column" fxLayoutAlign="center center">
+          <section style="padding-top: 30px; padding-bottom: 20px;">
+            <p>
+              -----------------------Or continue with-----------------------
+            </p>
+          </section>
+          <section fxLayout fxLayoutGap="20px">
+            <mat-card class="icon-card">
+              <img
+                class="icon"
+                fxLayoutAlign="center"
+                src="assets\Images\Signup\google.png"
+              />
+            </mat-card>
+            <mat-card class="icon-card">
+              <img
+                class="icon"
+                fxLayoutAlign="center"
+                src="assets\Images\Signup\apple.png"
+              />
+            </mat-card>
+            <mat-card class="icon-card">
+              <img
+                class="icon"
+                fxLayoutAlign="center"
+                src="assets\Images\Signup\facebook.png"
+              />
+            </mat-card>
+          </section>
+        </section>
+      </section>
+    </section>
+  </div>
+</div>
