--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -49,7 +49,7 @@
               #password="ngModel"
             /> </mat-form-field
           ><br />
-          <section style="padding-inline-start: 245px;padding-bottom:20px;">
+          <section style="padding-inline-start: 245px; padding-bottom: 20px;">
             <a class="a" href="/recovery">Recovery Password</a>
           </section>
           <button
@@ -59,7 +59,7 @@
             color="primary"
             [disabled]="form.invalid"
           >
-            <a class="a2" href="/login">Sign up</a>
+            <a class="a2" href="/login">Sign In</a>
           </button>
         </form>
         <section fxLayout="column" fxLayoutAlign="center center">
