--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -89,8 +89,8 @@
             </p>
           </section>
           <section fxLayout fxLayoutGap="20px">
-            <mat-card class="icon-card">
-              <img
+            <mat-card class="icon-card" >
+              <img (click)="googleSignIn()"
                 class="icon"
                 fxLayoutAlign="center"
                 src="assets\Images\Signup\google.png"
