--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,42 +1,30 @@
-<div fxLayout fxLayoutAlign="center" fxLayoutGap="60px" class="signup">
+<div class="container1">
   <div fxLayout>
     <div class="container">
-      <img class="image" src="assets\Images\Signup\signup.jpg" />
-      <section class="centered">
-        <p class="heading">
-          Sign Up to<br />
-          try Hexi for free
-        </p>
-        <p class="font">
-          If you already have an account <br />you can
-          <a class="a" href="/login">Sign in here!</a>
-        </p>
+      <section class="top-left">
+        <section class="oval"></section>
+      </section>
+      <section class="heading">
+        Sign Up to<br />
+        try Hexi for free.
+      </section>
+      <br /><br /><br /><br />
+      <section class="font">
+        If you already have an account <br />you can
+        <a class="a" href="/login">Sign in here!</a>
       </section>
     </div>
+    <br />
   </div>
-  <div style="padding-top: 50px;">
-    <section>
-      <section class="form-card">
-        <form fxLayout="column" #form="ngForm" (ngSubmit)="onsignup(form)">
-          <mat-form-field appearance="fill">
-            <input
-              class="input"
-              type="email"
-              placeholder="E-mail"
-              name="email"
-              ngModel
-              required
-              #emailinput="ngModel"
-            />
 
-            <mat-error *ngIf="emailinput.hasError('required')"
-              >Field must not be empty</mat-error
-            >
-            <mat-error *ngIf="!emailinput.hasError('required')"
-              >Email is invalid</mat-error
-            >
-          </mat-form-field>
-          <mat-form-field appearance="fill">
+  <div class="bottom-left">
+    <img class="image" src="\assets\Images\Signup\signup.png" />
+  </div>
+  <div class="top-right">
+    <div style="padding-top: 50px;">
+      <section>
+        <section class="form-card">
+          <form fxLayout="column" #form="ngForm" (ngSubmit)="onsignup(form)">
             <input
               class="input"
               type="text"
@@ -45,16 +33,17 @@
               ngModel
               required
               #nameinput="ngModel"
-            />
+            /><br />
+            <input
+              class="input"
+              type="email"
+              placeholder="E-mail"
+              name="email"
+              ngModel
+              required
+              #emailinput="ngModel"
+            /><br />
 
-            <mat-error *ngIf="nameinput.hasError('required')"
-              >Field must not be empty</mat-error
-            >
-            <mat-error *ngIf="!nameinput.hasError('required')"
-              >Name is invalid</mat-error
-            >
-          </mat-form-field>
-          <mat-form-field appearance="fill">
             <input
               class="input"
               type="text"
@@ -64,55 +53,68 @@
               required
               #phnoinput="ngModel"
             />
-
-            <mat-error *ngIf="phnoinput.hasError('required')"
-              >Field must not be empty</mat-error
+            <br />
+            <input
+              class="input"
+              type="password"
+              placeholder="Password"
+              name="pswd"
+              ngModel
+              required
+              #passwordinput="ngModel"
+            />
+            <br />
+            <input
+              class="input"
+              type="password"
+              placeholder="Confirm Password"
+              name="confirmpswd"
+              ngModel
+              required
+              #passwordinput="ngModel"
+            /><br /><br />
+            <button
+              class="btn"
+              type="submit"
+              color="primary"
+              [disabled]="form.invalid"
             >
-            <mat-error *ngIf="!phnoinput.hasError('required')"
-              >Email is invalid</mat-error
-            >
-          </mat-form-field>
-          <button
-            class="btn"
-            type="submit"
-            mat-raised-button
-            color="primary"
-            [disabled]="form.invalid"
-          >
-            <a class="a2" href="/login">Sign up</a>
-          </button>
-        </form>
-        <section fxLayout="column" fxLayoutAlign="center center">
-          <section style="padding-top: 30px; padding-bottom: 20px;">
-            <p>
-              -----------------------Or continue with-----------------------
-            </p>
-          </section>
-          <section fxLayout fxLayoutGap="20px">
-            <mat-card class="icon-card" >
-              <img (click)="googleSignIn()"
-                class="icon"
-                fxLayoutAlign="center"
-                src="assets\Images\Signup\google.png"
-              />
-            </mat-card>
-            <mat-card class="icon-card">
-              <img
-                class="icon"
-                fxLayoutAlign="center"
-                src="assets\Images\Signup\apple.png"
-              />
-            </mat-card>
-            <mat-card class="icon-card">
-              <img
-                class="icon"
-                fxLayoutAlign="center"
-                src="assets\Images\Signup\facebook.png"
-              />
-            </mat-card>
+              <a style="text-decoration: none; color: white;" href="/login"
+                >Sign up</a
+              >
+            </button>
+          </form>
+          <section fxLayout="column" fxLayoutAlign="center center">
+            <section style="padding-top: 30px; padding-bottom: 20px;">
+              <p>
+                -----------------------Or continue with-----------------------
+              </p>
+            </section>
+            <section fxLayout fxLayoutAlign="center center" fxLayoutGap="30px">
+              <section class="icon-card">
+                <img
+                  (click)="googleSignIn()"
+                  fxLayout="column"
+                  fxLayoutAlign="center center"
+                  src="assets\Images\Signup\google.png"
+                />
+              </section>
+              <section class="icon-card">
+                <img
+                  fxLayoutAlign="center"
+                  src="assets\Images\Signup\apple.png"
+                />
+              </section>
+              <section class="icon-card">
+                <img
+                  fxLayoutAlign="center"
+                  src="assets\Images\Signup\facebook.png"
+                />
+              </section>
+            </section>
           </section>
         </section>
       </section>
-    </section>
+    </div>
   </div>
 </div>
