--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -44,7 +44,7 @@
             />
             <br />
             <section style="padding-inline-start: 245px; padding-bottom: 20px;">
-              <a class="a" href="/recovery" (click)="RecoveryPassword()">Recovery Password</a>
+              <a class="a1" href="/recovery" (click)="RecoveryPassword()">Recovery Password</a>
             </section>
             <button
             class="btn"
