--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -148,7 +148,10 @@
   text-decoration: none;
   color: #6ee3d0;
 }
-
+.a1 {
+  text-decoration: none;
+  color: lightgray;
+}
 .signup {
   position: relative;
   padding: 10px;
