--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -58,7 +58,7 @@
               class="input"
               type="password"
               placeholder="Password"
-              name="pswd"
+              name="password"
               ngModel
               required
               #passwordinput="ngModel"
