--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -62,10 +62,11 @@
     /* middle magenta */ 0 0 140px 90px #97ebf8;
 }
 .heading {
+  font-family: Arial;
+  font-weight: bold;
   font-size: 40px;
   line-height: 55px;
   text-align: left;
-  font-weight: bolder;
   letter-spacing: 1px;
   position: absolute;
   top: 200px;
@@ -127,7 +128,7 @@
   background-color: #16957f;
   height: 50px;
   font-size: 15px;
-   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 .btn:disabled {
   background-color: #82e7d6;
@@ -142,15 +143,15 @@
 .btn:disabled:hover {
   background-color: #16957f;
   font-size: 15px;
-   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 .a {
   text-decoration: none;
-  color: #6ee3d0;
+  color: #16957f;
 }
 .a1 {
   text-decoration: none;
-  color: lightgray;
+  color: #788a87;
 }
 .signup {
   position: relative;
