--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -127,7 +127,7 @@
   background-color: #16957f;
   height: 50px;
   font-size: 15px;
-   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 .btn:disabled {
   background-color: #82e7d6;
@@ -142,11 +142,11 @@
 .btn:disabled:hover {
   background-color: #16957f;
   font-size: 15px;
-   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 .a {
   text-decoration: none;
-  color: #6ee3d0;
+  color: #16957f;
 }
 
 .signup {
