--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -10,7 +10,7 @@
       </section>
       <br /><br /><br /><br />
       <section class="font">
-        If you already have an account <br />you can
+        If you already have an account <br />You can
         <a class="a" href="/login">Sign in here!</a>
       </section>
     </div>
